--- a/code/src/components/heart.css
+++ b/code/src/components/heart.css
@@ -1,12 +1,19 @@
 .heart__btn {
-    width: 70%;
+    width: 350px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background: #f2acad;
+    border-radius: 10px;
+}
+
+span {
+    display: flex;
     align-items: center;
 }
 
 .heart__btn-icon {
-    width: 30px;
+    width: 20px;
 }
 
 .heart__like {
@@ -14,11 +21,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 50px;
-    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
 }
-
-.heart__like .heart__btn-icon {
-    width: 20px;
+.heart__like:hover{
+    background:#cfc6c6;
 }
