--- a/code/src/index.css
+++ b/code/src/index.css
@@ -115,6 +115,7 @@ code {
 .liked-heartemoji {
   padding: 6px;
   border-radius: 50%;
+  border: none;
   margin-right: 5px;
   cursor: pointer;
 }
