--- a/code/src/styles/likeathought.css
+++ b/code/src/styles/likeathought.css
@@ -3,8 +3,19 @@
   border-radius: 50%;
   padding: 8px;
   margin-right: 6px;
-  font-size: 11px;
+  font-size: 14px;
   color: #dbdbdb;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.liked {
+  background: #FEACAC;
+}
+
+.not-liked {
+  background: #EAEAEA;
 }
 
 .likes {
