--- a/code/src/components/css/thoughtsFeed.css
+++ b/code/src/components/css/thoughtsFeed.css
@@ -1,31 +1,61 @@
 .feed-section {
   display: flex;
   justify-content: center;
-  padding: 15px 0; 
+  padding: 15px 0;
 }
 
-.thought-container {
-  display: flex; 
+.thoughts-container {
+  display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
   width: 80%;
   border: 1px solid black;
-  box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
+  padding: 15px;
+  margin: 10px;
+  box-shadow: 13px 14px 0px -6px rgba(0, 0, 0, 1);
 }
 
 .thought-text {
   font-family: "Inconsolata";
   font-size: 16px;
-  margin: 15px 10px 0px 10px;
+  word-break: break-word;
 }
 
 .post-time {
-  color: #8F8F8F;
-  font-size: 10px;
+  color: #8f8f8f;
+  font-size: 12px;
 }
 
 .thought-footer {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   justify-content: space-between;
-  margin: 10px;
+  width: 100%;
+}
+
+/* Tablet */
+@media screen and (min-width: 667px) and (max-width: 1024px) {
+  .feed-section {
+    padding: 0;
+  }
+
+  .thoughts-container {
+    width: 50%;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+  .thoughts-container {
+    width: 40%;
+  }
+
+  .thought-text {
+    font-size: 20px;
+  }
+
+  .post-time {
+    font-size: 14px;
+  }
 }
