--- a/code/src/styles/likeathought.css
+++ b/code/src/styles/likeathought.css
@@ -6,6 +6,7 @@
   font-size: 14px;
   width: 35px;
   height: 35px;
+  margin-bottom: 2.5px;
 }
 
 .liked {
@@ -13,7 +14,7 @@
 }
 
 .not-liked {
-  background: #EAEAEA;
+  background: #d4d4d4;
 }
 
 .likes {
