--- a/code/src/styles/likeathought.css
+++ b/code/src/styles/likeathought.css
@@ -4,9 +4,6 @@
   padding: 8px;
   margin-right: 6px;
   font-size: 14px;
-  width: 35px;
-  height: 35px;
-  margin-bottom: 2.5px;
 }
 
 .liked {
@@ -14,7 +11,7 @@
 }
 
 .not-liked {
-  background: #d4d4d4;
+  background: #EAEAEA;
 }
 
 .likes {
