--- a/code/src/styles/likeathought.css
+++ b/code/src/styles/likeathought.css
@@ -2,10 +2,8 @@
   border: none;
   border-radius: 50%;
   padding: 8px;
+  margin-right: 6px;
   font-size: 14px;
-  margin: 0 6px 2.5px 0;
-  width: 35px;
-  height: 35px;
 }
 
 .liked {
