--- a/code/src/components/thoughts-list.css
+++ b/code/src/components/thoughts-list.css
@@ -28,7 +28,7 @@ li {
   color: grey;
 }
 
-button {
+.heart-button {
   border: 1px solid rgb(236, 236, 236);
   border-radius: 50%;
   background-color: rgb(236, 236, 236);
