--- a/code/src/components/thoughts-list.css
+++ b/code/src/components/thoughts-list.css
@@ -7,8 +7,8 @@
 }
 
 .thought-container {
-  border: 2px solid grey;
-  background-color: #FFFFFF;
+  border: 2px solid #000000;
+  background-color: #F2F0F0;
   width: 500px;
   padding: 20px;
   margin-bottom: 40px;
@@ -25,13 +25,14 @@ li {
 
 .time-stamp {
   font-size: 16px;
-  color: grey;
+  color: #AAAAAF;
 }
 
 .heart-button {
-  border: 1px solid rgb(236, 236, 236);
+  border: 1px solid #F2F0F0;
   border-radius: 50%;
-  background-color: rgb(236, 236, 236);
+  background-color: #F2F0F0;
+  /* when clicked: #FFADAD; */
   padding: 10px;
   margin-top: 10px;
 }
