--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,8 +3,13 @@ body {
   background-position: 74% 41%;
   font-family: 'Raleway', sans-serif;
   margin: 0;
+}
 
-  
+.main-form {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 365px;
+  width: 90vw;
 }
 
 
