--- a/code/src/components/card.css
+++ b/code/src/components/card.css
@@ -11,7 +11,6 @@
 }
 
 .card-bottom {
-  /* border: 1px dashed salmon; */
   height: 32px;
   display: flex;
   justify-content: space-between;
@@ -19,13 +18,11 @@
 }
 
 .card-bottom-likes {
-  /* border: 1px dashed aqua; */
   display: flex;
   align-items: center;
 }
 
 .card-bottom-time {
-  /* border: 1px dashed lightgreen; */
   display: flex;
   align-items: center;
 }
@@ -35,10 +32,9 @@ button {
   outline: 0;
 }
 
-button img {
+button svg {
   display: block;
   margin: auto;
-  fill: red;
 }
 
 .button-like {
@@ -51,10 +47,17 @@ button img {
 
 .button-like:hover {
   background-color: rgba(255, 88, 109, 0.08);
-  /* background-color: rgba(0,0,0, 0.05); */
   cursor: pointer;
 }
 
 .button-like:active {
   background-color: rgba(255, 88, 109, 0.25);
+}
+
+.button-like-liked {
+  background-color: rgba(255, 88, 109, 1);
+}
+
+.button-like-notLiked {
+  background-color: rgba(255, 88, 109, 0.1);
 }
