--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,8 +19,7 @@ main {
   width: 420px;
   max-width: 100%;
   margin: 0 auto;
-  padding: 16px 16px;
-  /* border: 1px dashed rgba(255,255,255,0.4); */
+  padding: 48px 16px 80px 16px;
   overflow: scroll;
 }
 
