--- a/code/src/components/messageForm.css
+++ b/code/src/components/messageForm.css
@@ -1,5 +1,5 @@
 .happy-form, .message {
-  background-color: #f3f1f1;
+  background-color:#f3f1f1;
   border: 2px solid black;
   box-shadow: 4px 4px black;
   width: 300px;
@@ -95,7 +95,8 @@
 
 .heart {
   position: absolute;
-  transform: translate(-47%, -45%);
+  transform: translate(-48%, -45%);
+  font-size: 20px;
 }
 
 button.liked {
