--- a/code/src/components/messageList.css
+++ b/code/src/components/messageList.css
@@ -1,51 +1,72 @@
 .message-card {
-  /* background-image: url("./img/card-background.jpg");
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover; */
   background: seashell;
-  width: 400px;
-  padding: 15px;
+  background-image: url("./img/paper-2500942_640.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
   margin-bottom: 30px;
   border: 1px solid lightgrey;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: box-shadow 500ms ease;  
+  transition: box-shadow 500ms ease;
+  color: #121212;
 }
 
 .message-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+.message {
+  font-family: 'Kalam', cursive;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 20px;
+  word-break: break-word;
+}
+
 .message-info {
   margin-top: 30px;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .heart-button {
   cursor: pointer;
-  width: 40px;
-  height: 40px;
-  /* background: lightcoral; */
-  border: none;
+  width: 45px;
+  height: 45px;
+  border: 1px solid lightgrey;
   border-radius: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .heart {
-  transform: scale(1.2);
+  transform: scale(1.3);
   transition: all 300ms ease-in-out;
 }
 
 .heart-button:hover .heart{
-  transform: scale(1.5);
+  transform: scale(1.6);
+}
+
+.no-likes {
+  background: #e0c9d3;
+}
+
+.with-likes {
+background: #ca9cc4;
+}
+
+.nr-of-likes {
+  margin-bottom: 0;
+  color: #919191;
 }
 
 .message-time {
+  margin-bottom: 0;
   margin-left: auto;
-  color: #bdbdbd;
+  color: #aaaaaa;
 }
