--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,9 +5,93 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  font-size: 16px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+form {
+  margin-top: 30px;
+  padding-top: 3px;
+  border: 2px solid #4d4d4d;
+  background: #f2f0f0;
+  box-shadow: 6px 7px;
+}
+
+.form-text{
+  margin:8px;
+  font-size:26px; 
+}
+
+.form-button{
+  margin:8px;
+  font-size:26px;
+
+}
+
+.message{
+  margin:8px;
+  font-size:26px; 
+}
+
+.message-time{
+  margin:8px;
+  font-size:18px;
+  color:#6e6e6e;
+}
+
+/* STYLING AV KNAPPAR OCH DERAS DELAR */
+/* .superLiked
+.liked
+.notLiked */
+
+
+body {
+  margin: 0;
+  font-family: 'Menlo Regular', monospace, 'Courier New', Courier;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  font-size: 16px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.message-container {
+  width: 500px;
+  height: 400px;
+}
+
+.message-list {
+  margin-top: 30px;
+  padding-top: 3px;
+  border: 2px solid #4d4d4d;
+  background: #f2f0f0;
+  box-shadow: 6px 7px;
+}
+
+h1 {
+  margin-top: 60px;
+  font-size: 32px;
+  text-align: center;
+}
+
+/* Text form */
+form {
+  
+  margin-top: 30px;
+  padding-top: 3px;
+  border: 2px solid #4d4d4d;
+  background: #f2f0f0;
+  box-shadow: 6px 7px;
+}
+
