--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 
-/**FOR THE INPUT AND MESSAGES*/
+/**FOR THE FEED*/
 
 .input-section {
   display: flex;
@@ -41,3 +41,103 @@ code {
   align-items: center;
   justify-content: space-between;
 }
+
+.time {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 10px;
+  font-weight: 600;
+  color: #C1C1C1;
+}
+
+.text-message {
+  font-family: Menlo;
+  font-size: 12px;
+  word-break: break-word;
+}
+
+label {
+  margin-bottom: 10px;
+}
+  
+textarea {
+  width: 90%;
+  min-height: 50px;
+  border: solid 1px #C9C9C9;
+  margin-bottom: 5px;
+  font-family: Menlo;
+  font-size: 12px;
+  
+}
+
+textarea:focus {
+  outline: #FFADAD solid 2px;
+}
+
+.thought-button span {
+  margin: 0 5px;
+}
+
+.thought-button:disabled, .thought-button[disabled] {
+  opacity: 0.6;
+}
+
+.thought-button {
+  background-color: #FFADAD;
+  border: none;
+  border-radius: 25px;
+  text-align: center;
+  padding: 10px 6px;
+  margin: 0;
+  transition: 0.5s ease;
+  place-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.text-length {
+  font-size: 10px;
+  margin: 0;
+}
+/**RESPONSIVE*/
+
+/* Tablet */
+@media screen and (min-width: 667px) and (max-width: 1024px) {
+
+  .input-container {
+    width: 400px;
+  }
+
+  .thought-button {
+    padding: 10px;
+  }
+
+  .text-length {
+    font-size: 12px;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+
+  .input-container {
+    padding: 20px;
+    font-size: 14px;
+    width: 500px;
+  }
+
+  textarea {
+    font-size: 14px;
+    min-height: 60px;
+  }
+
+  .thought-button {
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  .text-length {
+    font-size: 12px;
+  }
+}
+
