--- a/code/src/components/messageinput.css
+++ b/code/src/components/messageinput.css
@@ -34,20 +34,20 @@
   -webkit-appearance: none;
 
   border: 0;
-  border-radius: 100px;
-  
+  border-radius: 24px;
+
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
   line-height: 100%;
   color: rgba(0, 0, 0, 0.87);
 
-  flex-grow: 1;
+  flex: 1;
 }
 
-.message-field:active, .message-field:focus {
+.message-field:active,
+.message-field:focus {
   outline: 0;
-  box-shadow: inset 0px 0px 0px 3px #7764E8,
-  0px 2px 8px rgba(0, 0, 0, 0.25),
+  box-shadow: inset 0px 0px 0px 3px #7764e8, 0px 2px 8px rgba(0, 0, 0, 0.25),
     0px 8px 24px rgba(255, 88, 108, 0.5);
 }
 
@@ -59,12 +59,12 @@
   border-radius: 50%;
 }
 
+/* Aligns the icon in the button */
 .button-send-message img {
   position: relative;
   left: 2px;
+  top: 1px;
 }
-
-
 
 .button-send-message-active {
   background: #7764e8;
@@ -73,22 +73,20 @@
 }
 
 .button-send-message-active:hover {
-  background: #7F6BF7;
+  background: #7f6bf7;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25),
-  0px 12px 32px rgba(255, 88, 108, 0.5);
+    0px 12px 32px rgba(255, 88, 108, 0.5);
 }
 
 .button-send-message-active:active {
-  background: #7F6BF7;
+  background: #7f6bf7;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.35),
-  0px 4px 16px rgba(255, 88, 108, 0.6);
+    0px 4px 16px rgba(255, 88, 108, 0.6);
 }
 
-
-
-
+/* These classes aren't used right now, but I'll save them for when (if) I add validation. */
 .button-send-message-inactive {
-  background: #BBB2F4;
+  background: #bbb2f4;
 }
 
 .button-send-message-inactive:hover {
