--- a/code/src/Styles/thoughtform.css
+++ b/code/src/Styles/thoughtform.css
@@ -5,11 +5,12 @@
     background: #eeeeee;
     border: 1px solid;
     box-shadow: 5px 10px;
+    width: 100%;
 }
 
 .thoughts-form__input {
     width: 100%;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
 }
 
 ::placeholder {
@@ -17,13 +18,21 @@
 }
 
 .thoughts-form__button {
+    font-size: 16px;
     border-radius: 100px;
     background: #ffc4c4;
     padding: 10px;
     border: none;
     font-family: 'Inconsolata', monospace;
+    font-weight: 700;
 }
 
-.message-length {
+.message-length__ok {
     text-align: right;
+    color: #000000;
+}
+
+.message-length__error {
+    text-align: right;
+    color: #ff0000;
 }
