--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,14 +3,15 @@
 
 body {
   margin: 0;
-  padding: 20px;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Inconsolata', monospace;
 }
 
-.happy-thoughts-container {
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px;
 }
