--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,11 +7,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Inconsolata', monospace;
+  background: #ffe9e9;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .main {
+padding: 100px;
+}
+
+.thoughts-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
 }
