--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,5 @@
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,103 +15,13 @@ code {
     monospace;
 }
 
-div {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-}
-.thoughts-container {
+.container {
+  max-width: 1400px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: flex-end;
-}
-
-.message {
-  width: 510px;
-  height: min-content;
-  background-color: white;
-  color: black;
-  box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 1);
-  border: 1px solid black;
-  margin: 20px;
-  display: inline-block;
-  text-align: left;
-  padding: 25px;
-}
-
-.heart-button {
-  font-size: 30px;
-  height: 55px;
-  width: 55px;
-  border-radius: 50%;
-  background-color: rgb(250, 250, 250);
-  display: flex;
-  justify-content: center;
-  margin-bottom: -25px;
-  margin-left: -10px;
-  transition: all 0.3s ease-in-out;
-}
-
-.heart-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-.liked {
-  background-color: #ffadad;
-}
-
-.num-hearts {
-  margin-left: 80px;
-}
-
-.time-stamp {
-  font-size: 16px;
-  color: #bebebe;
-  font-weight: 900;
-  margin-left: 250px;
-}
-
-.input-container {
-  width: 510px;
-  height: 180px;
-  background-color: rgb(242, 240, 240);
-  box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 1);
-  border: 2px solid black;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 10px;
-  margin: 10px 0 20px 0;
-  font-family: "Commissioner", sans-serif;
-}
-
-#newMessage {
-  height: 50px;
-}
-
-.new-thought h3 {
-  color: black;
-}
-
-.form-button {
-  background-color: rgb(255, 173, 173);
-  width: 250px;
-  height: 50px;
-  border-radius: 30px;
-  color: black;
-  margin-top: 10px;
-  font-size: 16px;
-}
-
-.thought {
-  color: black;
-  font-family: monospace, sans-serif;
-  font-size: 20px;
-  margin: 5px 5px 5px 15px;
-  padding: 10px;
+  align-items: center;
+  align-content: center;
+  margin: auto;
 }
