--- a/code/src/components/thoughts-list.css
+++ b/code/src/components/thoughts-list.css
@@ -13,6 +13,7 @@
   padding: 20px;
   margin-bottom: 40px;
   word-wrap: break-word;
+  box-shadow: 8px 11px;
 }
 
 li {
@@ -22,6 +23,12 @@ li {
 .time-stamp {
   font-size: 16px;
   color: #AAAAAF;
+}
+
+.heart-button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .heart-button {
