--- a/code/src/components/header.css
+++ b/code/src/components/header.css
@@ -10,6 +10,7 @@ h1 {
 @media (min-width: 330px) {
   h1 {
     font-size: 48px;
+    /* letter-spacing: 0.6px; */
   }
 }
 
@@ -17,5 +18,10 @@ h1 {
   h1 {
     margin: 30px 0 40px 0;
     font-size: 64px;
+    transition: all 500ms;
+  }
+
+  h1:hover {
+    letter-spacing: 2px;
   }
 }
